--- a/projects/standford-swift-iOS/Psychologist/Psychologist/Base.lproj/Main.storyboard
+++ b/projects/standford-swift-iOS/Psychologist/Psychologist/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What do you see in your dreams?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="cZk-Pc-Vk1">
-                                <rect key="frame" x="20" y="64" width="560" height="39"/>
+                                <rect key="frame" x="20" y="64" width="560" height="38.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -39,7 +39,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="AiV-ge-dmD" kind="showDetail" identifier="happy" id="WiR-i3-kaI"/>
+                                    <segue destination="q5C-US-FZB" kind="showDetail" identifier="happy" id="WiR-i3-kaI"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcG-So-aNN">
@@ -56,7 +56,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="AiV-ge-dmD" kind="showDetail" identifier="sad" id="BHc-vO-aML"/>
+                                    <segue destination="q5C-US-FZB" kind="showDetail" identifier="sad" id="BHc-vO-aML"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W8j-R1-2DT">
@@ -73,7 +73,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="AiV-ge-dmD" kind="showDetail" identifier="meh" id="ohG-rr-03l"/>
+                                    <segue destination="q5C-US-FZB" kind="showDetail" identifier="meh" id="ohG-rr-03l"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -109,23 +109,61 @@
             </objects>
             <point key="canvasLocation" x="911" y="374"/>
         </scene>
+        <!--Text View Controller-->
+        <scene sceneID="Fyu-ye-glc">
+            <objects>
+                <viewController id="w0p-33-1xN" customClass="TextViewController" customModule="Psychologist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sUZ-Pd-BnL"/>
+                        <viewControllerLayoutGuide type="bottom" id="uyb-Gh-ys0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="55f-G3-cUk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rzo-Eb-Fwi">
+                                <rect key="frame" x="20" y="20" width="560" height="552"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uyb-Gh-ys0" firstAttribute="top" secondItem="Rzo-Eb-Fwi" secondAttribute="bottom" constant="28" id="3wZ-R7-N3B"/>
+                            <constraint firstItem="Rzo-Eb-Fwi" firstAttribute="top" secondItem="sUZ-Pd-BnL" secondAttribute="bottom" id="MtY-yF-bcC"/>
+                            <constraint firstItem="Rzo-Eb-Fwi" firstAttribute="leading" secondItem="55f-G3-cUk" secondAttribute="leadingMargin" id="V2D-5r-M5O"/>
+                            <constraint firstItem="Rzo-Eb-Fwi" firstAttribute="trailing" secondItem="55f-G3-cUk" secondAttribute="trailingMargin" id="rdS-84-EkB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="Rzo-Eb-Fwi" id="VX9-mk-MqZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aLL-w6-YfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2318" y="1276"/>
+        </scene>
         <!--Split View Controller-->
         <scene sceneID="bvz-gB-RV3">
             <objects>
                 <splitViewController id="n6V-gB-wgc" sceneMemberID="viewController">
                     <connections>
                         <segue destination="eBs-dg-Jxv" kind="relationship" relationship="masterViewController" id="TVd-tl-tpe"/>
-                        <segue destination="AiV-ge-dmD" kind="relationship" relationship="detailViewController" id="2gt-4I-2mC"/>
+                        <segue destination="q5C-US-FZB" kind="relationship" relationship="detailViewController" id="2gt-4I-2mC"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="na5-Nz-d4T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-655" y="732"/>
         </scene>
-        <!--Happiness View Controller-->
+        <!--Diagnosed Happiness View Controller-->
         <scene sceneID="hfx-eR-Xkn">
             <objects>
-                <viewController id="AiV-ge-dmD" customClass="HappinessViewController" customModule="Psychologist" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="AiV-ge-dmD" customClass="DiagnosedHappinessViewController" customModule="Psychologist" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6XB-ik-y6o"/>
                         <viewControllerLayoutGuide type="bottom" id="qfn-TK-ErN"/>
@@ -135,7 +173,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nBE-vu-zxq" customClass="FaceView" customModule="Psychologist" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
@@ -158,12 +196,21 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="nBE-vu-zxq" firstAttribute="top" secondItem="6lX-u2-B75" secondAttribute="top" id="TIW-K7-Jqw"/>
-                            <constraint firstAttribute="trailing" secondItem="nBE-vu-zxq" secondAttribute="trailing" id="XDh-N7-yJD"/>
-                            <constraint firstItem="nBE-vu-zxq" firstAttribute="bottom" secondItem="qfn-TK-ErN" secondAttribute="top" id="sRK-mp-3VE"/>
-                            <constraint firstItem="nBE-vu-zxq" firstAttribute="leading" secondItem="6lX-u2-B75" secondAttribute="leading" id="tAs-qR-gMa"/>
+                            <constraint firstAttribute="trailing" secondItem="nBE-vu-zxq" secondAttribute="trailing" id="2U0-JL-qlN"/>
+                            <constraint firstItem="nBE-vu-zxq" firstAttribute="leading" secondItem="6lX-u2-B75" secondAttribute="leading" id="MQm-zZ-I22"/>
+                            <constraint firstItem="nBE-vu-zxq" firstAttribute="bottom" secondItem="qfn-TK-ErN" secondAttribute="top" id="OQY-TN-OJP"/>
+                            <constraint firstItem="nBE-vu-zxq" firstAttribute="top" secondItem="6XB-ik-y6o" secondAttribute="bottom" id="Q3G-1a-hCa"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="DKK-RU-zTR">
+                        <barButtonItem key="rightBarButtonItem" title="History" id="Wif-UJ-xjS">
+                            <connections>
+                                <segue destination="w0p-33-1xN" kind="popoverPresentation" identifier="Diagnostic History" popoverAnchorBarButtonItem="Wif-UJ-xjS" id="34U-K8-1Ok">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="faceView" destination="nBE-vu-zxq" id="hL6-Ki-Pu3"/>
                     </connections>
@@ -175,7 +222,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="548" y="1251"/>
+            <point key="canvasLocation" x="1360" y="1251"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="foc-Le-G8V">
@@ -196,8 +243,27 @@
             </objects>
             <point key="canvasLocation" x="99" y="374"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bue-6s-aDn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q5C-US-FZB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aSi-Nv-Jv4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AiV-ge-dmD" kind="relationship" relationship="rootViewController" id="ROZ-xx-1ma"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2jn-0v-hNd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="548" y="1251"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="BHc-vO-aML"/>
+        <segue reference="ohG-rr-03l"/>
     </inferredMetricsTieBreakers>
 </document>
